@@ -1,0 +1,2 @@
+PKG_CPPFLAGS = -DSTRICT_R_HEADERS -DR_NO_REMAP
+PKG_CFLAGS = $(C_VISIBILITY)
