@@ -1,7 +1,7 @@
 #include <math.h> /* sqrt */
 #include <string.h> /* size_t, ptrdiff_t, memcpy */
-#include <Rinternals.h>
 #include <R_ext/RS.h>
+#include <Rinternals.h>
 
 static
 void ptpi(const double *series, int lengthOut,
@@ -170,16 +170,16 @@ SEXP R_ptpi(SEXP s_series, SEXP s_sigma, SEXP s_gamma, SEXP s_delta,
             SEXP s_backcalc, SEXP s_complete)
 {
 	int m = INTEGER(s_m)[0], n = INTEGER(s_n)[0],
-		lengthOut = INTEGER(getAttrib(s_series, R_DimSymbol))[0],
+		lengthOut = INTEGER(Rf_getAttrib(s_series, R_DimSymbol))[0],
 		a = INTEGER(s_a)[0], b = INTEGER(s_b)[0],
 		iterMax = INTEGER(s_iterMax)[0],
 		complete = LOGICAL(s_complete)[0];
 
-	SEXP ans = PROTECT(allocVector(VECSXP, 4)),
-		nms = PROTECT(allocVector(STRSXP, 4)),
-		value = PROTECT(allocVector(REALSXP, m + n + 2)),
-		diff = PROTECT(allocVector(REALSXP, 1)),
-		iter = PROTECT(allocVector(INTSXP, 1)),
+	SEXP ans = PROTECT(Rf_allocVector(VECSXP, 4)),
+		nms = PROTECT(Rf_allocVector(STRSXP, 4)),
+		value = PROTECT(Rf_allocVector(REALSXP, m + n + 2)),
+		diff = PROTECT(Rf_allocVector(REALSXP, 1)),
+		iter = PROTECT(Rf_allocVector(INTSXP, 1)),
 		x = R_NilValue;
 
 	int d[3];
@@ -187,16 +187,16 @@ SEXP R_ptpi(SEXP s_series, SEXP s_sigma, SEXP s_gamma, SEXP s_delta,
 		d[0] = b - a;
 		d[1] = m + n + 2;
 		d[2] = iterMax;
-		x = allocVector(REALSXP, (R_xlen_t) d[0] * d[1] * d[2]);
+		x = Rf_allocVector(REALSXP, (R_xlen_t) d[0] * d[1] * d[2]);
 	}
 
 	PROTECT(x);
 
-	SET_STRING_ELT(nms, 0, mkChar("value"));
-	SET_STRING_ELT(nms, 1, mkChar("diff"));
-	SET_STRING_ELT(nms, 2, mkChar("iter"));
-	SET_STRING_ELT(nms, 3, mkChar("x"));
-	setAttrib(ans, R_NamesSymbol, nms);
+	SET_STRING_ELT(nms, 0, Rf_mkChar("value"));
+	SET_STRING_ELT(nms, 1, Rf_mkChar("diff"));
+	SET_STRING_ELT(nms, 2, Rf_mkChar("iter"));
+	SET_STRING_ELT(nms, 3, Rf_mkChar("x"));
+	Rf_setAttrib(ans, R_NamesSymbol, nms);
 
 	SET_VECTOR_ELT(ans, 0, value);
 	SET_VECTOR_ELT(ans, 1, diff);
@@ -211,17 +211,17 @@ SEXP R_ptpi(SEXP s_series, SEXP s_sigma, SEXP s_gamma, SEXP s_delta,
 	if (complete) {
 		d[2] = INTEGER(iter)[0];
 
-		SEXP dim = PROTECT(allocVector(INTSXP, 3));
+		SEXP dim = PROTECT(Rf_allocVector(INTSXP, 3));
 		memcpy(INTEGER(dim), &d, 3 * sizeof(int));
 
 		if (d[2] >= iterMax) {
-		setAttrib(x, R_DimSymbol, dim);
+		Rf_setAttrib(x, R_DimSymbol, dim);
 		SET_VECTOR_ELT(ans, 3, x);
 		}
 		else {
-		SEXP y = PROTECT(allocVector(REALSXP, (R_xlen_t) d[0] * d[1] * d[2]));
+		SEXP y = PROTECT(Rf_allocVector(REALSXP, (R_xlen_t) d[0] * d[1] * d[2]));
 		memcpy(REAL(y), REAL(x), (size_t) ((ptrdiff_t) d[0] * d[1] * d[2]) * sizeof(double));
-		setAttrib(y, R_DimSymbol, dim);
+		Rf_setAttrib(y, R_DimSymbol, dim);
 		SET_VECTOR_ELT(ans, 3, y);
 		UNPROTECT(1);
 		}
